fix: version updated

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "lion-lib-pra",
-  "version": "1.0.0",
+  "name": "mypackage295",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
